--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/editar.xhtml
@@ -25,7 +25,7 @@
                 <p:focus id="focus" context="p1"></p:focus>
                 <p:panelGrid columns="4" class="Container50 Responsive" id="p1">
                     <p:outputLabel for="usuario" value="Usuario: " class=" Responsive"></p:outputLabel>
-                    <p:inputText tabindex="1" id="usuario" value="#{mntoUsuariosController.usuarioModifica.usuario}" required="true" requiredMessage="Debe ingresar Usuario"></p:inputText>
+                    <p:inputText tabindex="1" id="usuario" value="#{mntoUsuariosController.usuarioModifica.usuario}" maxlength="30" required="true" requiredMessage="Debe ingresar Usuario"></p:inputText>
                     <p:outputLabel for="tipoUsuario" value="Tipo de Usuario: " class=" Responsive"></p:outputLabel>
                     <p:outputLabel id="tipoUsuario" value="#{mntoUsuariosController.usuarioModifica.tipoUsuario}"></p:outputLabel>
                     <p:outputLabel for="tipoPermiso" value="Tipo de Permiso: " class=" Responsive"></p:outputLabel>
@@ -42,9 +42,9 @@
                         <f:selectItem itemValue="D"  itemLabel="Inactivo"></f:selectItem>
                     </p:selectOneMenu>
                     <p:outputLabel for="pass1" value="Contraseña: " class="  Responsive"></p:outputLabel>
-                    <p:password tabindex="5" id="pass1" value="#{mntoUsuariosController.usuarioModifica.pass1}" match="pass2" feedback="true" weakLabel="Seguridad Baja" goodLabel="Seguridad Media" strongLabel="Seguridad Alta"  required="true" requiredMessage="Debe ingresar una contraseña" placeholder="Contraseña" promptLabel="Digite una contraseña" validatorMessage="Contraseña coincide"></p:password>
+                    <p:password tabindex="5" id="pass1" value="#{mntoUsuariosController.usuarioModifica.pass1}" maxlength="30" match="pass2" feedback="true" weakLabel="Seguridad Baja" goodLabel="Seguridad Media" strongLabel="Seguridad Alta"  required="true" requiredMessage="Debe ingresar una contraseña" placeholder="Contraseña" promptLabel="Digite una contraseña" validatorMessage="Contraseña coincide"></p:password>
                     <p:outputLabel for="pass2" value="Repetir Contraseña: " class="  Responsive"></p:outputLabel>
-                    <p:password tabindex="6" id="pass2" value="#{mntoUsuariosController.usuarioModifica.pass2}" ></p:password>
+                    <p:password tabindex="6" id="pass2" value="#{mntoUsuariosController.usuarioModifica.pass2}" maxlength="30" ></p:password>
                 </p:panelGrid>
                 <div class="EmptyBox20"></div> 
                 <div class="Container100">
