--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAlumnos/expediente/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAlumnos/expediente/ver.xhtml
@@ -31,8 +31,8 @@
                 <div class="Container10" style="margin-top: 20px;margin-left: 40px;">
                     <p:outputLabel value="Foto:" class="Container20"></p:outputLabel>
                 </div>
-                <div class="Container70">
-                    <p:graphicImage id="fotoSubida" value="#{gestionarAlumnosController.fotoUsableModifica}" width="100em" cache="false"></p:graphicImage>
+                <div>
+                    <p:graphicImage id="fotoSubida" name="#{copiaArchivos.multimediaBaseUrl}/#{gestionarAlumnosController.fotoUsableModifica.arRuta}" width="20px" style="width: 150px;margin-top: 10px;" cache="false"></p:graphicImage>
                 </div>
                 <div class="EmptyBox20"></div>
                 <p:panelGrid columns="4" class="Container100 Responsive" id="p1">
