--- a/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/index.xhtml
@@ -29,7 +29,7 @@
 
                 <p:remoteCommand name="updateTablaConsulta" update="consulta"></p:remoteCommand>
                 <p:dataTable id="consulta" paginatorPosition="bottom" var="car" value="#{gestionarDocentesController.docentesList}" 
-                             paginator="true" rows="5"
+                             paginator="true" rows="10"
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              rowsPerPageTemplate="10,20,40"
                              reflow="true">
@@ -63,7 +63,7 @@
                 </p:dataTable>
                 <div class="EmptyBox20"></div>
 
-                <p:commandButton value="Adicionar Docente" action="#{gestionarDocentesController.setIndexMenu(1)}" ></p:commandButton>
+                <p:commandButton value="Adicionar Docente" action="#{gestionarDocentesController.nuevo()}" ></p:commandButton>
                 <p:commandButton value="Refrescar" action="#{gestionarDocentesController.refresh()}" update="consulta"></p:commandButton>
             </h:form>
         </p:panel>
