--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAlumnos/expediente/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAlumnos/expediente/editar.xhtml
@@ -24,11 +24,11 @@
                 <div class="Container10" style="margin-top: 20px;margin-left: 40px;">
                     <p:outputLabel value="Foto:" class="Container20"></p:outputLabel>
                 </div>
-                <div class="Container70">
-                    <p:graphicImage id="fotoSubida" value="#{gestionarAlumnosController.fotoUsableModifica}" width="100em" cache="false"></p:graphicImage>
+                <div>
+                    <p:graphicImage id="fotoSubida" name="#{copiaArchivos.multimediaBaseUrl}/#{gestionarAlumnosController.fotoUsableModifica.arRuta}" width="20px" style="width: 150px;margin-top: 10px;" cache="false"></p:graphicImage>
                 </div>
                 <h:panelGrid class="Container100">
-                    <p:fileUpload id="archivo" label="Buscar" cancelLabel="cancelar" fileUploadListener="#{gestionarAlumnosController.getFotoNuevaModifica(event)}"
+                    <p:fileUpload id="archivo" label="Buscar" cancelLabel="cancelar" fileUploadListener="#{gestionarAlumnosController.getFotoNuevaModifica}"
                                   uploadLabel="Subir archivo" multiple="false" mode="advanced" skinSimple="true" allowTypes="/(\.|\/)(jpg)$/" 
                                   value="#{gestionarAlumnosController.fotoModifica}" update="fotoSubida" sizeLimit="#{tamanioUtils.imagenMax}" 
                                   invalidSizeMessage="Archivo muy grande"
