actualizacion global del sistema, manejo de excepciones

--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/editar.xhtml
@@ -33,6 +33,8 @@
                         <f:selectItem itemValue="0" itemLabel="Alumno"></f:selectItem>
                         <f:selectItem itemValue="1" itemLabel="Docente"></f:selectItem>
                         <f:selectItem itemValue="2" itemLabel="Administrador"></f:selectItem>
+                        <f:selectItem itemValue="3" itemLabel="Subdirector"></f:selectItem>
+                        <f:selectItem itemValue="4" itemLabel="Director"></f:selectItem>
                     </p:selectOneMenu>
                     <p:outputLabel for="nombre" value="Nombre: " class=" Responsive" ></p:outputLabel>
                     <p:outputLabel id="nombre" value="#{mntoUsuariosController.usuarioModifica.nombre}"></p:outputLabel>
