--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/crear.xhtml
@@ -37,6 +37,8 @@
                         <f:selectItem itemValue="0" itemLabel="Alumno"></f:selectItem>
                         <f:selectItem itemValue="1" itemLabel="Docente"></f:selectItem>
                         <f:selectItem itemValue="2" itemLabel="Administrador"></f:selectItem>
+                        <f:selectItem itemValue="3" itemLabel="Subdirector"></f:selectItem>
+                        <f:selectItem itemValue="4" itemLabel="Director"></f:selectItem>
                     </p:selectOneMenu>
                     <p:outputLabel for="nombre" value="Nombre: " class=" Responsive" ></p:outputLabel>
                     <p:selectOneMenu id="nombre"  filter="true" filterMatchMode="contains" value="#{mntoUsuariosController.usuarioNuevo.idUsuario}" tabindex="0"  required="true" requiredMessage="Debe seleccionar nombre">
