--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/crear.xhtml
@@ -23,7 +23,7 @@
                 </p:dialog>
                 <p:panelGrid columns="2" class="Container50 Responsive" id="p1">
                     <p:outputLabel for="nombre"  value="Nombre del Curso:  " class=" Responsive"></p:outputLabel>
-                    <p:inputText id="nombre" class=" Responsive" value="#{gestionCursoController.cursoNuevo.crNombre}"/>
+                    <p:inputText id="nombre" class=" Responsive" value="#{gestionCursoController.cursoNuevo.crNombre}"><f:validateLength minimum="10" maximum="50" /></p:inputText>
                     <p:outputLabel for="capacidad" value="Capacidad: " class=" Responsive"></p:outputLabel>
                     <p:spinner id="capacidad" class=" Responsive" value="#{gestionCursoController.cursoNuevo.crCapacidad}" max="999" min="1"></p:spinner>
                     <p:outputLabel for="docente" value="Docente: " class="  Responsive"></p:outputLabel>
@@ -35,7 +35,7 @@
                     <p:outputLabel for="grado" value="Grado: " class=" Responsive" ></p:outputLabel>
                     <p:selectOneMenu id="grado" filter="true" filterMatchMode="contains" value="#{gestionCursoController.idGrado}" valueChangeListener="#{gestionCursoController.getSeccionesGrado}">
                         <f:selectItems itemValue="#{grado.idGrado}" itemLabel="#{grado.grNombre}" value="#{gestionCursoController.gradoList}" var="grado"></f:selectItems>
-                        <p:ajax event="valueChange" update="seccion"/>
+                        <p:ajax event="valueChange" update="seccion,materia"/>
                     </p:selectOneMenu>
                     <p:outputLabel for="seccion" value="Sección del grado: " class="  Responsive"></p:outputLabel>
                     <p:selectOneMenu id="seccion" value="#{gestionCursoController.idSeccion}">
